# sink

./: .gitignore  AUTHORS  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.circleci/: config.yml  config_bk.yml
.scripts/: codecov.sh
cqrs/: Cargo.toml
cqrs/src/: bounded_counter.rs  lib.rs
httpserver/: Cargo.toml
httpserver/src/: lib.rs  main.rs
logging/: Cargo.toml
logging/src/: lib.rs  macros.rs
sink/: Cargo.toml  build.rs
sink/src/: asyncsink.rs  echo.rs  echosink.rs  fnsink.rs  iasyncsink.rs  isink.rs  lib.rs  macros.rs  macros2.rs  map.rs  optionmap.rs  partial_macro.rs  reduce.rs  reflect.rs  resultmap.rs  sink.rs  sinkmap.rs  statefulsink.rs  vecsink.rs
source/: isource.rs  lib.rs
src/: echo.rs  lib.rs  macros.rs  nullsink.rs  reduce.rs  reflect.rs  sink.rs  sink2.rs  sinkmap.rs  statefulsink.rs
system/: Cargo.toml
system/src/: icomponent.rs  isystem.rs  lib.rs
tcpserver/: Cargo.toml
tcpserver/src/: component.rs  env.rs  http.rs  lib.rs  log.rs  main.rs  main_bk.rs  net.rs  product.rs  pure.rs  server.rs  socket_addrs.rs  stdio.rs
tcpserver/src/runtimes/: concatview.rs  domain.rs  elm.rs  eventstore.rs  mod.rs  threaded.rs  unthreaded.rs
