[package]
name = "sink"
version = "0.1.0"
authors = ["Perry Birch"]
license = "MIT"
readme = "README.md"
keywords = ["sink"]
repository = "https://github.com/omnivers3/sink"
description = """
This crate aims to provide an abstraction for a thing which can be sent values
and return a Result indicating success / failure of receipt.

As a base primitive this should enable a message oriented variant of the
inbound params to the familiar imperitive Result 'and_then' composition pattern.
"""
categories = ["streaming"]
